# project-chimera-w0

./: .coderabbit.yaml  .gitignore  Makefile  README.md  dockerfile  main.py  pyproject.toml  setup_notes.md
.github/: copilot-instructions.md
.github/workflows/: ci.yml
skills/: README.md  fetch_trends.md  generate_content.md  publish_content.md  semantic_filter.md  validate_content.md
specs/: 1-functional.md  2-design.md  3-verification.md  4-skills-api.md  5-mcp-resources.md  7-error-codes.md  _meta.md
tests/unit/models/: test_content_package_schema.py  test_error_codes.py  test_trend_data_schema.py
tests/unit/skills/: test_fetch_trends.py  test_semantic_filter.py
